test/functions/ferguson/set-const-ref-return.good
set-const-ref-return.chpl:14 error: setting const ref returned value
