test/functions/ferguson/set-const-ref-return.future
bug: needs error message to prevent setting result of const ref return
